--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html>
-    <script>
-        
-    </script>
+    <head>
+        <title>Alert System</title>
+        <script>
+            alert('Test!');
+        </script>
+    </head>
     <body>
 
     </body>
