--- a/index.html
+++ b/index.html
@@ -35,18 +35,19 @@
         {
             color: white;
             position: relative;
-            top: 5px;
             font-size: x-large;
+        }
+        .channel_img
+        {
+            position: relative;
+            left:16%;
+            top:16%;
         }
     </style>
 </head>
 <body>
     <!--logo-->
     <header>
-        <div class="git_logo">
-            <i class="fab fa-github"></i>
-            <a href="https://github.com/ych-bup/Ich.BOT" class="title">ICH.BOT Github Page</span>
-        </div>
         <div class="discord_logo">
             <i class="fab fa-discord"></i>
             <a href="https://discord.gg/3EHWced" class="title2">Official Discord Server</a>
@@ -54,7 +55,7 @@
     </header>
     <!--image-->
     <div class="player">
-        <img src="image/galaxy-11098_1280.jpg" class="channel_img" height="300px" width="600px">
+        <img src="image/galaxy-11098_1280.jpg" class="channel_img">
     </div>
 </body>
 </html>
