--- a/index.html
+++ b/index.html
@@ -43,19 +43,26 @@
             left:16%;
             top:16%;
         }
+        .infoAndNextVideo
+        {
+            display: flex;
+            flex-direction: column;
+        }
     </style>
 </head>
 <body>
-    <!--logo-->
-    <header>
-        <div class="discord_logo">
-            <i class="fab fa-discord"></i>
-            <a href="https://discord.gg/3EHWced" class="title2">Official Discord Server</a>
+    <div class="infoAndNextVideo">
+        <!--logo-->
+        <header>
+            <div class="discord_logo">
+                <i class="fab fa-discord"></i>
+                <a href="https://discord.gg/3EHWced" class="title2">Official Discord Server</a>
+            </div>
+        </header>
+        <!--image-->
+        <div class="player">
+            <img src="image/galaxy-11098_1280.jpg" class="channel_img">
         </div>
-    </header>
-    <!--image-->
-    <div class="player">
-        <img src="image/galaxy-11098_1280.jpg" class="channel_img">
     </div>
 </body>
 </html>
