--- a/index.html
+++ b/index.html
@@ -43,11 +43,14 @@
             left:16%;
             top:16%;
         }
-        .infoAndNextVideo
-        {
-            display: flex;
-            flex-direction: column;
+        @media screen and (min-width: 800px){
+            .infoAndNextVideo
+            {
+                display: flex;
+                flex-direction: column;
+            }
         }
+
     </style>
 </head>
 <body>
