--- a/index.html
+++ b/index.html
@@ -66,6 +66,10 @@
         <div class="player">
             <img src="image/galaxy-11098_1280.jpg" class="channel_img">
         </div>
+        <!--Info-->
+        <div class="bot_info">
+            <span class="bot_info_intro">Multi-Purpose Discord Chat Bot</span>
+        </div>
     </div>
 </body>
 </html>
