--- a/index.html
+++ b/index.html
@@ -50,7 +50,10 @@
                 flex-direction: column;
             }
         }
-
+        .bot_info
+        {
+            color: white;
+        }
     </style>
 </head>
 <body>
