--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
         .bot_info
         {
             color: white;
+            position: relative;
+            top: -100px;
         }
     </style>
 </head>
@@ -71,7 +73,12 @@
         </div>
         <!--Info-->
         <div class="bot_info">
-            <span class="bot_info_intro">Multi-Purpose Discord Chat Bot</span>
+            <span>Multi</span>
+            <span>|</span>
+            <span>Purpose</span>
+            <span>Discord</span>
+            <span>Chat</span>
+            <span>Bot</span>
         </div>
     </div>
 </body>
