--- a/index.html
+++ b/index.html
@@ -74,10 +74,20 @@
         <!--Info-->
         <div class="bot_info">
             <span>Multi</span>
+        </div>
+        <div class="bot_info">
             <span>|</span>
+        </div>
+        <div class="bot_info">
             <span>Purpose</span>
+        </div>
+        <div class="bot_info">
             <span>Discord</span>
+        </div>
+        <div class="bot_info">
             <span>Chat</span>
+        </div>
+        <div class="bot_info">
             <span>Bot</span>
         </div>
     </div>
