--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
         a:visited { color: white; text-decoration: none;}
         a:hover { color: white; text-decoration: none;}
         
+        @media screen and (min-width: 800px){
+            .infoAndNextVideo
+            {
+                display: flex;
+                flex-direction: column;
+            }
+        }
+
         body
         {
             background-color: black;
@@ -40,13 +48,8 @@
         .channel_img
         {
             position: relative;
-        }
-        @media screen and (min-width: 800px){
-            .infoAndNextVideo
-            {
-                display: flex;
-                flex-direction: column;
-            }
+            top: 16%;
+            left: 16%;
         }
         .bot_info
         {
@@ -54,40 +57,70 @@
             position: relative;
             top: -100px;
         }
+        .blind
+        {
+            position: absolute;
+            top:0;
+            left:0;
+            width: 1px;
+            height: 1px;
+            margin: -1px;
+            overflow: hidden;
+            clip: rect(0,0,0,0);
+        }
+        header{
+            border-bottom: 1px solid #000000;
+        }
+        .side_toggle_btn::before
+        {
+            color: #ffffff;
+            content: "▶";
+            display: inline-block;
+            width: 50px;
+            line-height: 50px;
+            font-size: 24px;
+            text-align: center;
+            border-right: 1px solid #000000;
+        }
+        .side_input:checked + .side_toggle_btn::before
+        {
+            content: "◀";
+        }
+        .side_input:checked ~ .side_list
+        {
+            left: 0;
+        }
+        .side_list
+        {
+            position: absolute;
+            left: -500px;
+            top: 58px;
+            bottom: 0;
+            border-right: 1px solid #000000;
+            width: 500px;
+            font-size: 24px;
+            transition: 0.3s ease-in;
+        }
+        .sdie_link
+        {
+            display: block;
+            text-align: center;
+            padding: 40px 0;
+            border-bottom: 1px solid #000000;
+        }
+
     </style>
 </head>
 <body>
     <div class="infoAndNextVideo">
-        <!--logo-->
-        <header>
-            <div class="discord_logo">
+        <header>        
+            <input type="checkbox" id="side_btn" class="side_input blind" />
+            <label for="side_btn" class="side_toggle_btn"></label>
+            <div class="side_list">
                 <i class="fab fa-discord"></i>
                 <a href="https://discord.gg/3EHWced" class="title2">Official Discord Server</a>
             </div>
         </header>
-        <!--image-->
-        <div class="player">
-            <img src="image/galaxy-11098_1280.jpg" class="channel_img">
-        </div>
-        <!--Info-->
-        <div class="bot_info">
-            <span>Multi</span>
-        </div>
-        <div class="bot_info">
-            <span>|</span>
-        </div>
-        <div class="bot_info">
-            <span>Purpose</span>
-        </div>
-        <div class="bot_info">
-            <span>Discord</span>
-        </div>
-        <div class="bot_info">
-            <span>Chat</span>
-        </div>
-        <div class="bot_info">
-            <span>Bot</span>
-        </div>
     </div>
 </body>
 </html>
