--- a/index.html
+++ b/index.html
@@ -24,38 +24,23 @@
         {
             background-color: black;
         }
-        .git_logo
-        {
-            color: white;
-            position: relative;
-            font-size: x-large;
-        }
-        .title
-        {
-            color: white;
-            font-weight: 800;
-        }
         .title2
         {
             font-weight: 800;
         }
-        .discord_logo
+        .bot_intro
         {
             color: white;
             position: relative;
-            font-size: x-large;
+            left: 50%;
+            top: 50%;
         }
-        .channel_img
-        {
-            position: relative;
-            top: 16%;
-            left: 16%;
-        }
-        .bot_info
+        .bot_intro2
         {
             color: white;
             position: relative;
-            top: -100px;
+            left: 40%;
+            top: 55%;
         }
         .blind
         {
@@ -93,11 +78,11 @@
         .side_list
         {
             position: absolute;
-            left: -500px;
+            left: -1915px;
             top: 58px;
             bottom: 0;
-            border-right: 1px solid #000000;
-            width: 500px;
+            border-right: 1px solid #ffffff;
+            width: 1915px;
             font-size: 24px;
             transition: 0.3s ease-in;
         }
@@ -117,8 +102,9 @@
             <input type="checkbox" id="side_btn" class="side_input blind" />
             <label for="side_btn" class="side_toggle_btn"></label>
             <div class="side_list">
-                <i class="fab fa-discord"></i>
                 <a href="https://discord.gg/3EHWced" class="title2">Official Discord Server</a>
+                <span class="bot_intro">MULTI-PURPOSE</span>
+                <span class="bot_intro2">DISCORD CHAT BOT</span>>
             </div>
         </header>
     </div>
