--- a/index.html
+++ b/index.html
@@ -77,11 +77,12 @@
         }
         .side_list
         {
+            color: white;
             position: absolute;
             left: -1915px;
             top: 58px;
             bottom: 0;
-            border-right: 1px solid #ffffff;
+            border-right: 1px solid #000000;
             width: 1915px;
             font-size: 24px;
             transition: 0.3s ease-in;
@@ -102,9 +103,10 @@
             <input type="checkbox" id="side_btn" class="side_input blind" />
             <label for="side_btn" class="side_toggle_btn"></label>
             <div class="side_list">
+                <i class="fab fa-discord"></i>
                 <a href="https://discord.gg/3EHWced" class="title2">Official Discord Server</a>
                 <span class="bot_intro">MULTI-PURPOSE</span>
-                <span class="bot_intro2">DISCORD CHAT BOT</span>>
+                <span class="bot_intro2">DISCORD CHAT BOT</span>
             </div>
         </header>
     </div>
