--- a/index.html
+++ b/index.html
@@ -28,20 +28,6 @@
         {
             font-weight: 800;
         }
-        .bot_intro
-        {
-            color: white;
-            position: relative;
-            left: 50%;
-            top: 50%;
-        }
-        .bot_intro2
-        {
-            color: white;
-            position: relative;
-            left: 40%;
-            top: 55%;
-        }
         .blind
         {
             position: absolute;
@@ -79,11 +65,11 @@
         {
             color: white;
             position: absolute;
-            left: -1915px;
+            left: -500px;
             top: 58px;
             bottom: 0;
-            border-right: 1px solid #000000;
-            width: 1915px;
+            border-right: 1px solid #ffffff;
+            width: 500px;
             font-size: 24px;
             transition: 0.3s ease-in;
         }
@@ -105,8 +91,6 @@
             <div class="side_list">
                 <i class="fab fa-discord"></i>
                 <a href="https://discord.gg/3EHWced" class="title2">Official Discord Server</a>
-                <span class="bot_intro">MULTI-PURPOSE</span>
-                <span class="bot_intro2">DISCORD CHAT BOT</span>
             </div>
         </header>
     </div>
