--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
     <title>Ich.Bot Official Docs</title>
+</head>
+<body>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
         AOS.init();
     </script>
-</head>
-<body>
+
     <div class="infoAndNextVideo">
         <header>        
             <input type="checkbox" id="side_btn" class="side_input blind" />
@@ -22,12 +24,20 @@
                 <a href="https://discord.gg/3EHWced" class="title2">Official Discord Server</a>
             </div>
         </header>
-        <div class="bot_icon">
-            <img src="image/galaxy-11098_1280.jpg">
-            <img src="image/galaxy-11098_1280.jpg" alt="">
+        <div class="bot_intro_0">
+            <div data-aos="fade-up" data-aos-duration="1500">hello</div>
         </div>
         <div class="bot_intro">
-            <div data-aos="fade-up">Multi Purpose Discord ChatBot</div>
+            <div data-aos="fade-up" data-aos-duration="1500">This is</div>
+        </div>
+        <div class="bot_intro">
+            <div data-aos="fade-up" data-aos-duration="1500">Multi Purpose Discord ChatBot</div>
+        </div>
+        <div class="bot_intro">
+            <div data-aos="fade-up" data-aos-duration="1500">ICH.BOT</div>
+        </div>
+        <div class="bot_icon">
+            <img src="image/galaxy-11098_1280.jpg">
         </div>
     </div>
 </body>
