--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <div data-aos="fade-up" data-aos-duration="1500">ICH.BOT</div>
         </div>
         <div class="bot_icon">
-            <img src="image/galaxy-11098_1280.jpg">
+            <img src="image/galaxy-11098_1280.jpg" data-aos="fade-up" data-aos-duration="1500">
         </div>
     </div>
 </body>
