--- a/index.html
+++ b/index.html
@@ -14,30 +14,43 @@
     <script>
         AOS.init();
     </script>
-
-    <div class="infoAndNextVideo">
-        <header>        
-            <input type="checkbox" id="side_btn" class="side_input blind" />
-            <label for="side_btn" class="side_toggle_btn"></label>
-            <div class="side_list">
-                <i class="fab fa-discord"></i>
-                <a href="https://discord.gg/3EHWced" class="title2">Official Discord Server</a>
-            </div>
-        </header>
-        <div class="bot_intro_0">
-            <div data-aos="fade-up" data-aos-duration="1500">hello</div>
+    <header>        
+        <input type="checkbox" id="side_btn" class="side_input blind" />
+        <label for="side_btn" class="side_toggle_btn"></label>
+        <div class="side_list">
+            <i class="fab fa-discord"></i>
+            <a href="https://discord.gg/3EHWced" class="title1">Official Discord Server</a>
         </div>
-        <div class="bot_intro">
-            <div data-aos="fade-up" data-aos-duration="1500">This is</div>
+    </header>
+    <div class="bot_intro_0">
+        <div data-aos="fade-up" data-aos-duration="1500">hello</div>
+    </div>
+    <div class="bot_intro">
+        <div data-aos="fade-up" data-aos-duration="1500">This is</div>
+    </div>
+    <div class="bot_intro">
+        <div data-aos="fade-up" data-aos-duration="1500">Multi Purpose Discord ChatBot</div>
+    </div>
+    <div class="bot_intro">
+        <div data-aos="fade-up" data-aos-duration="1500">ICH.BOT</div>
+    </div>
+    <div class="bot_icon">
+        <img src="image/galaxy-11098_1280.jpg" data-aos="fade-up" data-aos-duration="1500">
+    </div>
+    <div>
+        <div class="bot_intro_1">
+            <div data-aos="fade-left" data-aos-duration="1000" class="title3">Ich.BOT</div>
+            <div data-aos="fade-right" data-aos-duration="1000" class="title3">can moderate</div>
+            <div data-aos="fade-down" data-aos-duration="1000" class="title3">your server.</div>        
         </div>
-        <div class="bot_intro">
-            <div data-aos="fade-up" data-aos-duration="1500">Multi Purpose Discord ChatBot</div>
-        </div>
-        <div class="bot_intro">
-            <div data-aos="fade-up" data-aos-duration="1500">ICH.BOT</div>
-        </div>
-        <div class="bot_icon">
-            <img src="image/galaxy-11098_1280.jpg" data-aos="fade-up" data-aos-duration="1500">
+        <div class="moderate_ex">
+            <div class="title2">kick</div>
+            <div class="title2">ban</div>
+            <div class="title2">purge</div>
+            <div class="title2">mute</div>
+            <div class="title2">unmute</div>
+            <div class="title2">nickname</div>
+            <div class="title2">prefix</div>
         </div>
     </div>
 </body>
