--- a/index.html
+++ b/index.html
@@ -38,19 +38,19 @@
         <img src="image/galaxy-11098_1280.jpg" data-aos="fade-up" data-aos-duration="1500">
     </div>
     <div>
-        <div class="bot_intro_1">
+        <div class="bot_intro_mod">
             <div data-aos="fade-left" data-aos-duration="1000" class="title3">Ich.BOT</div>
             <div data-aos="fade-right" data-aos-duration="1000" class="title3">can moderate</div>
             <div data-aos="fade-down" data-aos-duration="1000" class="title3">your server.</div>        
         </div>
         <div class="moderate_ex">
-            <div class="title2">kick</div>
-            <div class="title2">ban</div>
-            <div class="title2">purge</div>
-            <div class="title2">mute</div>
-            <div class="title2">unmute</div>
-            <div class="title2">nickname</div>
-            <div class="title2">prefix</div>
+            <div class="title2"  data-aos="fade-right">kick</div>
+            <div class="title2"  data-aos="fade-left">ban</div>
+            <div class="title2"  data-aos="fade-up">purge</div>
+            <div class="title2"  data-aos="fade-down">mute</div>
+            <div class="title2"  data-aos="fade-right">unmute</div>
+            <div class="title2"  data-aos="fade-left">nickname</div>
+            <div class="title2"  data-aos="fade-right">prefix</div>
         </div>
     </div>
 </body>
