--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
     <div class="bot_icon">
         <img src="image/galaxy-11098_1280.jpg" data-aos="fade-up" data-aos-duration="1500">
     </div>
+    
+    <!--mod help-->
     <div>
         <div class="bot_intro_mod">
             <div data-aos="fade-left" data-aos-duration="1000" class="title3">Ich.BOT</div>
@@ -51,6 +53,20 @@
             <div class="title2"  data-aos="fade-right">unmute</div>
             <div class="title2"  data-aos="fade-left">nickname</div>
             <div class="title2"  data-aos="fade-right">prefix</div>
+        </div>
+    </div>
+    <!--fun help-->
+    <div>
+        <div class="bot_intro_fun">
+            <div data-aos="fade-right" data-aos-duration="1000" class="title3">Also</div>
+            <div data-aos="fade-up" data-aos-duration="1000" class="title3">Ich.BOT</div>
+            <div data-aos="fade-down" data-aos-duration="1000" class="title3">can make</div>
+            <div data-aos="fade-up" data-aos-duration="1000" class="title3">you fun.</div>
+        </div>
+        <div class="fun_ex">
+            <div class="title2"  data-aos="fade-right">jackpot</div>
+            <div class="title2"  data-aos="fade-left">cmaker</div>
+            <div class="title2"  data-aos="fade-up">coinflip</div>
         </div>
     </div>
 </body>
