--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </div>
     
     <!--mod help-->
-    <div>
+    <div class="bot_mod">
         <div class="bot_intro_mod">
             <div data-aos="fade-left" data-aos-duration="1000" class="title3">Ich.BOT</div>
             <div data-aos="fade-right" data-aos-duration="1000" class="title3">can moderate</div>
@@ -51,12 +51,12 @@
             <div class="title2"  data-aos="fade-up">purge</div>
             <div class="title2"  data-aos="fade-down">mute</div>
             <div class="title2"  data-aos="fade-right">unmute</div>
-            <div class="title2"  data-aos="fade-left">nickname</div>
+            <div class="title2"  data-aos="fade-up">nickname</div>
             <div class="title2"  data-aos="fade-right">prefix</div>
         </div>
     </div>
     <!--fun help-->
-    <div>
+    <div class="bot_fun">
         <div class="bot_intro_fun">
             <div data-aos="fade-right" data-aos-duration="1000" class="title3">Also</div>
             <div data-aos="fade-up" data-aos-duration="1000" class="title3">Ich.BOT</div>
