--- a/index.html
+++ b/index.html
@@ -46,13 +46,13 @@
             <div data-aos="fade-down" data-aos-duration="1000" class="title3">your server.</div>        
         </div>
         <div class="moderate_ex">
-            <div class="title2"  data-aos="fade-right">kick</div>
-            <div class="title2"  data-aos="fade-left">ban</div>
-            <div class="title2"  data-aos="fade-up">purge</div>
-            <div class="title2"  data-aos="fade-down">mute</div>
-            <div class="title2"  data-aos="fade-right">unmute</div>
-            <div class="title2"  data-aos="fade-up">nickname</div>
-            <div class="title2"  data-aos="fade-right">prefix</div>
+            <div class="title2"  data-aos="fade-right" data-aos-duration="1000">kick</div>
+            <div class="title2"  data-aos="fade-left" data-aos-duration="1000">ban</div>
+            <div class="title2"  data-aos="fade-up" data-aos-duration="1000">purge</div>
+            <div class="title2"  data-aos="fade-down" data-aos-duration="1000">mute</div>
+            <div class="title2"  data-aos="fade-right" data-aos-duration="1000">unmute</div>
+            <div class="title2"  data-aos="fade-up" data-aos-duration="1000">nickname</div>
+            <div class="title2"  data-aos="fade-right" data-aos-duration="1000">prefix</div>
         </div>
     </div>
     <!--fun help-->
@@ -64,9 +64,9 @@
             <div data-aos="fade-up" data-aos-duration="1000" class="title3">you fun.</div>
         </div>
         <div class="fun_ex">
-            <div class="title2"  data-aos="fade-right">jackpot</div>
-            <div class="title2"  data-aos="fade-left">cmaker</div>
-            <div class="title2"  data-aos="fade-up">coinflip</div>
+            <div class="title2"  data-aos="fade-right" data-aos-duration="1000">jackpot</div>
+            <div class="title2"  data-aos="fade-left" data-aos-duration="1000">cmaker</div>
+            <div class="title2"  data-aos="fade-up" data-aos-duration="1000">coinflip</div>
         </div>
     </div>
 </body>
