--- a/index.html
+++ b/index.html
@@ -69,5 +69,26 @@
             <div class="title2"  data-aos="fade-up" data-aos-duration="1000">coinflip</div>
         </div>
     </div>
+    <!--info help-->
+    <div class="bot_info">
+        <div class="bot_intro_info">
+            <div data-aos="fade-right" data-aos-duration="1000" class="title3">Oh!</div>
+            <div data-aos="fade-up" data-aos-duration="1000" class="title3">Ich.BOT</div>
+            <div data-aos="fade-down" data-aos-duration="1000" class="title3">show your</div>
+            <div data-aos="fade-left" data-aos-duration="1000" class="title3">info!</div>
+        </div>
+        <div class="info_ex">
+            <div class="title2"  data-aos="fade-right" data-aos-duration="1000">botinfo</div>
+            <div class="title2"  data-aos="fade-up" data-aos-duration="1000">read</div>
+            <div class="title2"  data-aos="zoom-out" data-aos-duration="1000">user</div>
+            <div class="title2"  data-aos="fade-down" data-aos-duration="1000">guild</div>
+            <div class="title2"  data-aos="fade-right" data-aos-duration="1000">userinfo</div>
+            <div class="title2"  data-aos="fade-up" data-aos-duration="1000">serverinfo</div>
+            <div class="title2"  data-aos="fade-down" data-aos-duration="1000">avatar</div>
+            <div class="title2"  data-aos="fade-down" data-aos-duration="1000">serverav</div>
+            <div class="title2"  data-aos="fade-right" data-aos-duration="1000">ownerav</div>
+        </div>
+    </div>
+    <!--text help-->
 </body>
 </html>
