--- a/index.html
+++ b/index.html
@@ -90,5 +90,9 @@
         </div>
     </div>
     <!--text help-->
+    <div class="bot_text">
+        <div class="bot_intro_text"></div>
+        <div class="text_ex"></div>
+    </div>
 </body>
 </html>
