--- a/index.html
+++ b/index.html
@@ -37,7 +37,6 @@
     <div class="bot_icon">
         <img src="image/galaxy-11098_1280.jpg" data-aos="fade-up" data-aos-duration="1500">
     </div>
-    
     <!--mod help-->
     <div class="bot_mod">
         <div class="bot_intro_mod">
@@ -91,7 +90,12 @@
     </div>
     <!--text help-->
     <div class="bot_text">
-        <div class="bot_intro_text"></div>
+        <div class="bot_intro_text">
+            <div data-aos="fade-right" data-aos-duration="1000" class="title3">Finally,</div>
+            <div data-aos="fade-up" data-aos-duration="1000" class="title3">Ich.BOT</div>
+            <div data-aos="fade-down" data-aos-duration="1000" class="title3">show your</div>
+            <div data-aos="fade-right" data-aos-duration="1000" class="title3">info!</div>
+        </div>
         <div class="text_ex"></div>
     </div>
 </body>
