--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <label for="side_btn" class="side_toggle_btn"></label>
         <div class="side_list">
             <i class="fab fa-discord"></i>
-            <a href="https://discord.gg/3EHWced" class="title1">Official Discord Server</a>
+            <a href="https://discord.gg/3EHWced" target="_blank" class="title1">Official Discord Server</a>
         </div>
     </header>
     <div class="bot_intro_0">
@@ -93,10 +93,26 @@
         <div class="bot_intro_text">
             <div data-aos="fade-right" data-aos-duration="1000" class="title3">Finally,</div>
             <div data-aos="fade-up" data-aos-duration="1000" class="title3">Ich.BOT</div>
-            <div data-aos="fade-down" data-aos-duration="1000" class="title3">show your</div>
-            <div data-aos="fade-right" data-aos-duration="1000" class="title3">info!</div>
+            <div data-aos="fade-down" data-aos-duration="1000" class="title3">give you help</div>
+            <div data-aos="fade-right" data-aos-duration="1000" class="title3">with text.</div>
         </div>
-        <div class="text_ex"></div>
+        <div class="text_ex">
+            <div class="title2"  data-aos="fade-right" data-aos-duration="1000">help</div>
+            <div class="title2"  data-aos="fade-up" data-aos-duration="1000">ang</div>
+            <div class="title2"  data-aos="zoom-out" data-aos-duration="1000">calc</div>
+            <div class="title2"  data-aos="fade-down" data-aos-duration="1000">ping</div>
+            <div class="title2"  data-aos="fade-right" data-aos-duration="1000">search</div>
+        </div>
+    </div>
+    <!--Now you can use-->
+    <div class="ho_gang_hang_whi">
+        <div class="now" data-aos="fade-up" data-aos-duration="1500">Now,</div>
+        <div class="now" data-aos="fade-up" data-aos-duration="1500">you can use</div>
+        <div class="now" data-aos="fade-up" data-aos-duration="1500">ICH.BOT</div>
+    </div>
+    <div class="inviteLink">
+        <div class="bot_invite">Invite Bot</div>
+        <img src="image/galaxy-11098_1280.jpg" class="invite_bot">
     </div>
 </body>
 </html>
