--- a/index.html
+++ b/index.html
@@ -106,9 +106,20 @@
     </div>
     <!--Now you can use-->
     <div class="ho_gang_hang_whi">
-        <div class="now" data-aos="fade-up" data-aos-duration="3000">Now,</div>
-        <div class="now" data-aos="fade-up" data-aos-duration="3000">you can use</div>
-        <div class="now" data-aos="fade-up" data-aos-duration="3000">ICH.BOT</div>
+        <div class="now" data-aos="fade-up" data-aos-duration="1500">Now,</div>
+    </div>
+    <div class="ho_gang_hang_whi">
+        <div class="now" data-aos="fade-up" data-aos-duration="1500">you can use</div>
+    </div>
+    <div class="ho_gang_hang_whi">
+        <div class="now" data-aos="fade-up" data-aos-duration="1500">ICH.BOT</div>
+    </div>
+    <div class="inviteLink">            
+        <div class="bot_invite_0">Invite Bot To Server</div>
+        <a href="https://discord.com/oauth2/authorize?client_id=780408136460402738&permissions=1916267615&scope=bot" target="_blank">
+
+            <img class="bot_invite" src="image/My Post.jpg">
+        </a>
     </div>
 </body>
 </html>
